--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@bhattiasad99/muslimgive__perms-registry": "^1.0.4",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -26,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "perms-registry": "link:C:/Users/HP/AppData/Local/pnpm/global/5/node_modules/@yourname/perms-registry",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "set-cookie-parser": "^2.7.1",
