--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
@@ -23,12 +24,15 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "perms-registry": "link:C:/Users/HP/AppData/Local/pnpm/global/5/node_modules/@yourname/perms-registry",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "set-cookie-parser": "^2.7.1",
     "tailwind-merge": "^3.3.1",
