--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
+    "fuzzy-search": "^3.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
