--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@bhattiasad99/muslimgive__perms-registry": "^1.0.4",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -32,11 +33,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "perms-registry": "link:C:/Users/HP/AppData/Local/pnpm/global/5/node_modules/@yourname/perms-registry",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "set-cookie-parser": "^2.7.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
   },
