--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "country-data-list": "^1.6.0",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "fuzzy-search": "^3.2.1",
@@ -36,11 +37,14 @@
     "next": "15.5.9",
     "next-themes": "^0.4.6",
     "perms-registry": "link:C:/Users/HP/AppData/Local/pnpm/global/5/node_modules/@yourname/perms-registry",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
+    "react-circle-flags": "^0.0.27",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "set-cookie-parser": "^2.7.1",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
