--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "fuzzy-search": "^3.2.1",
+    "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.9",
