--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,1 @@
-overrides:
-  perms-registry: link:C:/Users/HP/AppData/Local/pnpm/global/5/node_modules/@bhattiasad99/perms-registry
+# pnpm-workspace.yaml
